--- a/src/index.html
+++ b/src/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" http-equiv="encoding">
+  <title>HMCTS Manage Organisations</title>
   <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
   <base href="/">
 
